--- a/dmc60c-config-utility-release/dcu-www/styles.css
+++ b/dmc60c-config-utility-release/dcu-www/styles.css
@@ -55,7 +55,7 @@ body {
     background-color: #444444;
     border-radius: 3px;
     color: #b9b9b9;
-    padding: 15px;
+    padding: 10px 15px;
 }
 
 .param-wrapper {
@@ -81,7 +81,7 @@ body {
 }
 
 .console-wrapper {
-    padding-top: 30px;
+    padding-top: 15px;
 }
 
 .full-height {
@@ -285,16 +285,9 @@ body {
     background-color: rgba(245, 245, 245, 0.274);
 }
 
-.params-container {
-    padding: 10px;
-}
-
-.params-container {
-    text-align: center;
-}
-
 .param .row {
-    padding: 5px 15px 5px 15px;
+    padding: 5px 15px;
+    align-items: center;
 }
 
 .fault-reports {
@@ -331,16 +324,27 @@ body {
 }
 
 .label {
-    font-size: 13px;
+    font-size: 12.5px;
     text-align: right;
     padding: 0px 10px 0px 0px;
     margin-bottom: 0px;
+}
+
+.break-word {
+    overflow-wrap: break-word;
 }
 
 .checkbox-label {
     font-size: 14px;
     padding: 0px 10px 0px 0px;
     margin-bottom: 0px;
+}
+
+.unit-label {
+    font-size: 13px;
+    text-align: left;
+    padding-left: 5px;
+    padding-right: 0px;
 }
 
 .digilent-input {
@@ -367,21 +371,18 @@ body {
 
 .params-container {
     padding: 10px;
-}
-
-.params-container {
     text-align: center;
 }
 
 .dev-name,
-.fw-version {
+.fw-version,
+.sess-id{
     font-size: 12px;
     color: grey;
 }
 
-.param .row,
 .modal-body .row {
-    padding: 5px 15px 5px 15px;
+    padding: 10px 15px 5px 15px;
     align-items: center;
 }
 
@@ -426,6 +427,13 @@ body {
 
 .modal-body .label {
     flex: 1 0 20%;
+    padding-right: 5px;
+}
+
+.modal-body .unit-label {
+    font-size: 13px;
+    text-align: left;
+    padding: 0px 0px 0px 5px;
 }
 
 .modal-body .digilent-input {
@@ -440,8 +448,8 @@ body {
     /* color: #535353; */
 }
 
-.modal-body .other-params {
-    padding-right: 50px;
+.modal-body .params-container {
+    padding: 0px 0px 0px 20px;
 }
 
 .modal-footer {
